# servicediscovery

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  serverdiscovery.pro
examples/: examples.pro
examples/asio_client/: CMakeLists.txt  asio_client.pro  main.cpp
examples/asio_server/: CMakeLists.txt  asio_server.pro  main.cpp
examples/qt_client/: CMakeLists.txt  main.cpp  qt_client.pro
examples/qt_server/: CMakeLists.txt  main.cpp  qt_server.pro
serverdiscovery/: CMakeLists.txt  asio_cache.cpp  asio_serverdiscovery.pri  finally.hpp  qt_serverdiscovery.pri  serverdiscovery.pri  serverdiscovery.pro  ssdp_asio.cpp  ssdp_asio.hpp  ssdp_message.cpp  ssdp_message.hpp  ssdp_qt.cpp  ssdp_qt.hpp  string_find.h  string_format.h  string_trim.h
test_message/: test_message.pro  tst_parser.cpp
tests/: tests.pro
tests/test_message/: CMakeLists.txt  test_message.pro  tst_parser.cpp
tests/test_utility/: test_utility.pro  tst_clientutility.cpp
